web/styles/rendered_markdown.css
/* ... */
.preview_content.rendered_markdown {
    /*  Ensure that the first child and last child
    don't have blank area at the top and bottom respectively. */
    & :first-child {
        margin-top: 0;
    }

    & :last-child {
        margin-bottom: 0;
    }
}

.codehilite {
    display: block !important;
    border: none !important;
    background: none !important;
}

/* Both the horizontal scrollbar in <pre/> as well as
   vertical scrollbar in the <textarea/> is styled similarly. */
.message_edit_form textarea,
.rendered_markdown pre {
    /* Ensure the horizontal scrollbar is visible on Mac */
    &::-webkit-scrollbar {
        height: 8px;
        width: 10px;
        background-color: hsl(0deg 0% 0% / 5%);
    }

    &::-webkit-scrollbar-thumb {
        background-color: hsl(0deg 0% 0% / 30%);
        border-radius: 20px;
        transition: all 0.2s ease;
    }

    &::-webkit-scrollbar-thumb:hover {
        background-color: hsl(0deg 0% 0% / 60%);
    }
}

/* Search highlight used in both topics and rendered_markdown */
.highlight {
    background-color: hsl(51deg 100% 79%);
}

