compose: Fix incorrect preview area first/last child selectors.
Following up to #24961, it was discovered that emojis looked worse with
the new changes as the spacings became uneven with each emojis.

Debugging determined that the root cause that the selectors used
applied to __every__ first child of its parent inside the
rendered_markdown area, not just the first child of the main
container.

--- a/web/styles/rendered_markdown.css
+++ b/web/styles/rendered_markdown.css
@@ -659,11 +659,11 @@
 .preview_content.rendered_markdown {
     /*  Ensure that the first child and last child
     don't have blank area at the top and bottom respectively. */
-    & :first-child {
+    & > :first-child {
         margin-top: 0;
     }
 
-    & :last-child {
+    & > :last-child {
         margin-bottom: 0;
     }
 }
